# trik-desktop-gamepad

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  accelerateStrategy.cpp  accelerateStrategy.h  appveyor.yml  connectForm.cpp  connectForm.h  connectForm.ui  connectionManager.cpp  connectionManager.h  connectionThread.cpp  connectionThread.h  gamepadForm.cpp  gamepadForm.h  gamepadForm.ui  images.qrc  istrategy.h  lsan.supp  main.cpp  standardStrategy.cpp  standardStrategy.h  strategy.cpp  strategy.h  trikDesktopGamepad.pri  trikDesktopGamepad.pro  trikDesktopGamepad_de.qm  trikDesktopGamepad_de.ts  trikDesktopGamepad_en.qm  trikDesktopGamepad_en.ts  trikDesktopGamepad_fr.qm  trikDesktopGamepad_fr.ts  trikDesktopGamepad_ru.qm  trikDesktopGamepad_ru.ts
.github/: dependabot.yml
.github/workflows/: cmake.yml  main.yml
.travis/: install.sh  script.sh
cmake/: NoInSourceBuilds.cmake  QtHelper.cmake  TranslationUtils.cmake
dependencies/: CMakeLists.txt  dependencies.pro  singleapplication.pro
images/: arrow_down.xcf
languages/: trikDesktopGamepad_de.qm  trikDesktopGamepad_de.ts  trikDesktopGamepad_en.qm  trikDesktopGamepad_en.ts  trikDesktopGamepad_fr.qm  trikDesktopGamepad_fr.ts  trikDesktopGamepad_ru.qm  trikDesktopGamepad_ru.ts
packaging/: CMakeLists.txt
share/: CMakeLists.txt  fonts.qrc  images.qrc
share/fonts/: fontScrypt.py
share/translations/: CMakeLists.txt  trikDesktopGamepad_ru.ts
src/: CMakeLists.txt  accelerateStrategy.h  connectForm.h  connectForm.ui  connectionManager.h  gamepadForm.cpp  main.cpp  standardStrategy.h  strategy.cpp
